SERVER-31845 Bypass query subsystem to improve config.transactions update performance

(cherry picked from commit ece7d8eee78d77a1463302cad68120853af10a2a)